# RustJava

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  REPORT.md  STATE.md
classfile/: Cargo.toml
classfile/src/: attribute.rs  class.rs  constant_pool.rs  error.rs  field.rs  interface.rs  lib.rs  method.rs  opcode.rs  validation.rs
classfile/tests/: test.rs
integration_test/: Cargo.toml
integration_test/src/: lib.rs  run_class.rs  test_jvm.rs
integration_test/tests/: array.rs  control_flow.rs  field.rs  hello.rs  method.rs  odd_even.rs  super_class.rs
java_runtime/: Cargo.toml
java_runtime/src/: charset.rs  classes.rs  init.rs  lib.rs  loader.rs  runtime.rs
java_runtime/src/classes/: java.rs  org.rs  rustjava.rs
java_runtime/src/classes/java/: io.rs  lang.rs  net.rs  text.rs  util.rs
java_runtime/src/classes/java/io/: buffered_reader.rs  byte_array_input_stream.rs  byte_array_output_stream.rs  data_input.rs  data_input_stream.rs  data_output.rs  data_output_stream.rs  eof_exception.rs  file.rs  file_descriptor.rs  file_input_stream.rs  file_not_found_exception.rs  file_output_stream.rs  filter_input_stream.rs  filter_output_stream.rs  input_stream.rs  input_stream_reader.rs  interrupted_io_exception.rs  io_exception.rs  output_stream.rs  output_stream_writer.rs  print_stream.rs  print_writer.rs  random_access_file.rs  reader.rs  serializable.rs  string_writer.rs  unsupported_encoding_exception.rs  utf_data_format_exception.rs  writer.rs
java_runtime/src/classes/java/lang/: abstract_method_error.rs  arithmetic_exception.rs  array_index_out_of_bounds_exception.rs  array_store_exception.rs  boolean.rs  byte.rs  character.rs  class.rs  class_cast_exception.rs  class_format_error.rs  class_loader.rs  class_not_found_exception.rs  clone_not_supported_exception.rs  cloneable.rs  comparable.rs  double.rs  error.rs  exception.rs  exception_in_initializer_error.rs  float.rs  illegal_access_exception.rs  illegal_argument_exception.rs  illegal_monitor_state_exception.rs  illegal_thread_state_exception.rs  incompatible_class_change_error.rs  index_out_of_bounds_exception.rs  instantiation_error.rs  instantiation_exception.rs  integer.rs  interrupted_exception.rs  linkage_error.rs  long.rs  math.rs  negative_array_size_exception.rs  no_class_def_found_error.rs  no_such_field_error.rs  no_such_method_error.rs  null_pointer_exception.rs  number.rs  number_format_exception.rs  (+18 more)
java_runtime/src/classes/java/net/: jar_url_connection.rs  malformed_url_exception.rs  unknown_service_exception.rs  url.rs  url_class_loader.rs  url_connection.rs  url_stream_handler.rs
java_runtime/src/classes/java/text/: date_format.rs  decimal_format.rs  field_position.rs  format.rs  number_format.rs  parse_exception.rs  parse_position.rs  simple_date_format.rs
java_runtime/src/classes/java/util/: abstract_collection.rs  abstract_list.rs  abstract_map.rs  abstract_set.rs  array_list.rs  array_list_itr.rs  calendar.rs  collection.rs  date.rs  dictionary.rs  empty_stack_exception.rs  enumeration.rs  gregorian_calendar.rs  hash_map.rs  hash_map_entry.rs  hash_map_entry_iterator.rs  hash_map_entry_set.rs  hash_map_hash_iterator.rs  hash_map_key_iterator.rs  hash_map_key_set.rs  hash_map_value_iterator.rs  hash_map_values.rs  hash_set.rs  hashtable.rs  hashtable_entry.rs  hashtable_entry_set.rs  hashtable_enumerator.rs  hashtable_key_set.rs  (+20 more)
java_runtime/src/classes/org/: rustjava.rs
java_runtime/src/classes/rustjava/: array_class_loader.rs  byte_array_url_connection.rs  byte_array_url_handler.rs  class_path_class_loader.rs  class_path_entry.rs  net.rs  runtime_class_loader.rs
java_runtime/src/java/io/: byte_array_input_stream.rs  data_input_stream.rs  eof_exception.rs  input_stream.rs  io_exception.rs  output_stream.rs  print_stream.rs
java_runtime/src/java/lang/: class.rs  exception.rs  illegal_argument_exception.rs  index_out_of_bounds_exception.rs  integer.rs  interrupted_exception.rs  math.rs  null_pointer_exception.rs  object.rs  runnable.rs  runtime.rs  runtime_exception.rs  security_exception.rs  string.rs  string_buffer.rs  system.rs  thread.rs  throwable.rs
java_runtime/src/java/util/: calendar.rs  date.rs  gregorian_calendar.rs  hashtable.rs  random.rs  timer.rs  timer_task.rs  vector.rs
java_runtime/src/runtime/: io.rs
java_runtime/tests/: string.rs  tests.rs
java_runtime/tests/classes/: mod.rs
java_runtime/tests/classes/java/: mod.rs
java_runtime/tests/classes/org/: mod.rs
java_tests/: Cargo.toml
java_tests/src/: lib.rs
java_tests/tests/: hello.rs  odd_even.rs  tests.rs
java_tests/tests/jvm/: hello.rs  odd_even.rs
java_tests/tests/runtime/: string.rs
jvm/: Cargo.toml
jvm/src/: array_class.rs  array_class_definition.rs  array_class_instance.rs  as_any.rs  class.rs  class_definition.rs  class_instance.rs  class_loader.rs  class_registry.rs  detail.rs  error.rs  field.rs  garbage_collector.rs  global_ref.rs  interpreter.rs  invoke_arg.rs  jvm.rs  lib.rs  method.rs  monitor.rs  platform.rs  runtime.rs  stack_frame.rs  thread.rs  type.rs  value.rs
jvm/src/runtime/: java_io_input_stream.rs  java_lang_class.rs  java_lang_class_loader.rs  java_lang_classloader.rs  java_lang_string.rs  java_lang_thread.rs  string.rs
jvm/tests/: test_garbage_collection.rs  test_is_instance.rs  test_string.rs
jvm/tests/test_helper/: mod.rs
jvm_impl/: Cargo.toml
jvm_impl/src/: array_class.rs  array_class_instance.rs  class.rs  class_instance.rs  class_loader.rs  detail.rs  field.rs  interpreter.rs  lib.rs  method.rs  stack_frame.rs  thread.rs
jvm_impl/tests/: field.rs  hello.rs  odd_even.rs
jvm_rust/: Cargo.toml
jvm_rust/src/: array_class.rs  array_class_definition.rs  array_class_instance.rs  class.rs  class_definition.rs  class_instance.rs  detail.rs  error.rs  field.rs  interpreter.rs  lib.rs  method.rs  thread.rs  verifier.rs
jvm_tests/: Cargo.toml
jvm_tests/src/: lib.rs  run_class.rs  test_jvm.rs
jvm_tests/tests/: field.rs  hello.rs  odd_even.rs  test.rs
test_utils/: Cargo.toml
test_utils/src/: java_string.rs  lib.rs  run_class.rs  test_jvm.rs
(+269 files in other folders)
