[workspace]
resolver = "2"
members = ["classfile", "integration_test", "java_runtime", "jvm", "jvm_rust"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = { version = "^1.0", default-features = false }
async-trait = { version = "^0.1", default-features = false }
dyn-clone = { version = "^1.0", default-features = false }
nom = { version = "^7.1", default-features = false, features = ["alloc"] }
tracing = { version = "^0.1", default-features = false, features = ["attributes"] }

futures-test = { version = "^0.3" }

classfile = { path = "classfile" }
java_class_proto = { path = "java_class_proto" }
java_constants = { path = "java_constants" }
java_runtime = { path = "java_runtime" }
jvm = { path = "jvm" }
jvm_rust = { path = "jvm_rust" }
