[workspace]
members = ["classfile", "java_runtime", "jvm", "jvm_rust"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = { version = "^1.0", default-features = false }
async-trait = { version = "^0.1", default-features = false }
bytemuck = { version = "^1.14", default-features = false, features = ["extern_crate_alloc"] }
dyn-clone = { version = "^1.0", default-features = false }
nom = { version = "^7.1", default-features = false, features = ["alloc"] }
tracing = { version = "^0.1", default-features = false, features = ["attributes"] }

futures-test = { version = "^0.3" }

classfile = { path = "classfile" }
java_class_proto = { path = "java_class_proto" }
java_constants = { path = "java_constants" }
java_runtime = { path = "java_runtime" }
jvm = { path = "jvm" }
jvm_rust = { path = "jvm_rust" }

[package]
name = "rust_java"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[[bin]]
name = "rust_java"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
bytemuck = { workspace = true }

futures-executor = { version = "^0.3" }

jvm = { workspace = true }
jvm_rust = { workspace = true }
java_class_proto = { workspace = true }
java_runtime = { workspace = true }

[dev-dependencies]
futures-test = { workspace = true }
