[package]
name = "integration_test"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }

jvm = { path = "../jvm" }
jvm_rust = { path = "../jvm_rust" }
java_runtime = { path = "../java_runtime" }

[dev-dependencies]
futures-test = { workspace = true }
