[package]
name = "integration_test"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }

jvm = { workspace = true }
jvm_rust = { workspace = true }
java_runtime = { workspace = true }

[dev-dependencies]
futures-test = { workspace = true }
