[package]
name = "java_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bytemuck = { workspace = true }
dyn-clone = { workspace = true }
async-lock = { workspace = true }
tracing = { workspace = true }

encoding_rs = { version = "^0.8", features = ["alloc"], default-features = false }
hashbrown = { version = "^0.14", features = ["ahash"], default-features = false }
zip = { version = "^1.2", features = ["deflate"], default-features = false }
url = { version = "^2.5", default-features = false }

java_class_proto = { workspace = true }
java_constants = { workspace = true }
jvm = { workspace = true }

[dev-dependencies]
futures-test = { workspace = true }
jvm_rust = { workspace = true }
