[package]
name = "java_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bytemuck = { workspace = true }
dyn-clone = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

async-lock = { version = "^3.4", default-features = false }
chrono = { version = "^0.4", default-features = false }
encoding_rs = { version = "^0.8", features = ["alloc"], default-features = false }
event-listener = { version = "^5.3", default-features = false }
hashbrown = { version = "^0.14", features = ["ahash"], default-features = false }
zip = { version = "^2.2", features = ["deflate"], default-features = false }
url = { version = "^2.5", default-features = false }

java_class_proto = { workspace = true }
java_constants = { workspace = true }
jvm = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
jvm_rust = { workspace = true }
