[package]
name = "java_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bytemuck = { workspace = true }
dyn-clone = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

chrono = { version = "^0.4", default-features = false }
encoding_rs = { version = "^0.8", features = ["alloc"], default-features = false }
event-listener = { version = "^5.4", default-features = false }
zip = { version = "^4.0", features = ["deflate"], default-features = false }
url = { version = "^2.5", default-features = false }

java_class_proto = { workspace = true }
java_constants = { workspace = true }
jvm = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }

jvm_rust = { workspace = true }
test_utils = { workspace = true }
