[package]
name = "java_tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "^1.0" }
async-trait = { version = "^0.1" }

jvm = { path = "../jvm" }
jvm_impl = { path = "../jvm_impl" }
java_runtime = { path = "../java_runtime" }

[dev-dependencies]
futures-test = { version = "^0.3" }
