[package]
name = "jvm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
bytemuck = { workspace = true }
dyn-clone = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }

java_constants = { workspace = true }
