[package]
name = "jvm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
bytemuck = { workspace = true }
dyn-clone = { workspace = true }
nom = { workspace = true }
spin = { workspace = true }
tracing = { workspace = true }

java_constants = { workspace = true }
