[package]
name = "jvm_impl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "^1.0", default-features = false }
async-trait = { version = "^0.1", default-features = false }
dyn-clone = { version = "^1.0", default-features = false }
tracing = { version = "^0.1", default-features = false }

classfile = { path = "../classfile" }
jvm = { path = "../jvm" }
