[package]
name = "jvm_impl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dyn-clone = { workspace = true }
tracing = { workspace = true }

classfile = { path = "../classfile" }
java_runtime_base = { path = "../java_runtime_base" }
jvm = { path = "../jvm" }
