[package]
name = "jvm_rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dyn-clone = { workspace = true }
tracing = { workspace = true }

classfile = { path = "../classfile" }
java_class_proto = { path = "../java_class_proto" }
java_constants = { path = "../java_constants" }
jvm = { path = "../jvm" }
