[package]
name = "jvm_rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dyn-clone = { workspace = true }
tracing = { workspace = true }

classfile = { workspace = true }
java_class_proto = { workspace = true }
java_constants = { workspace = true }
jvm = { workspace = true }
