[package]
name = "jvm_tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }

jvm = { path = "../jvm" }
jvm_impl = { path = "../jvm_impl" }
java_runtime = { path = "../java_runtime" }

[dev-dependencies]
futures-test = { workspace = true }
