[package]
name = "test_utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "^1.0", default-features = false }
async-trait = { version = "^0.1", default-features = false }

jvm = { path = "../jvm" }
jvm_impl = { path = "../jvm_impl" }
java_runtime = { path = "../java_runtime" }
