[package]
name = "test_utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }

jvm = { workspace = true }
jvm_rust = { workspace = true }
java_runtime = { workspace = true }
